codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_surface_previews_thread_usage.snap
---
source: tui/src/chatwidget/tests/status_surface_previews.rs
expression: snapshot
---
status line: 5.2 credits · ~$0.21
terminal title: 5.2 credits | ~$0.21
