codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__stream_error_status_header.snap
---
source: tui/src/chatwidget/tests.rs
expression: status.header()
---
Reconnecting... 2/5
Update available. See https://github.com/openai/codex for installation options.
