codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__subagent_panel_mounts_while_placeholder_active_cell_exists.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend().vt100().screen().contents()
---
╭───────────────────────────────────────╮
│ >_ OpenAI Codex (v0.0.0)              │
│                                       │
│ model:     loading   /model to change │
│ directory: /tmp/project               │
╰───────────────────────────────────────╯

• Subagents (0s • no subagents running • esc to interrupt)
• [#1] [watchdog] watchdog-agent idle — watchdog idle


› show current subagent state

  gpt-5.3-codex default · 100% left · /tmp/project
