codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__subagent_summary_history_snapshot.snap
---
source: tui/src/chatwidget/tests.rs
expression: "combined"
---
• subagent await: subagent summary: 3 active processes
